RESOLVED FIXED117791
Fixing some compiler warnings
https://bugs.webkit.org/show_bug.cgi?id=117791
Summary Fixing some compiler warnings
Xabier Rodríguez Calvar
Reported 2013-06-19 04:39:24 PDT
Fixing some compiler warnings
Attachments
Patch (6.84 KB, patch)
2013-06-19 04:45 PDT, Xabier Rodríguez Calvar
no flags
Patch (6.86 KB, patch)
2013-06-19 14:42 PDT, Xabier Rodríguez Calvar
no flags
Patch (7.99 KB, patch)
2013-06-20 03:28 PDT, Xabier Rodríguez Calvar
no flags
Patch (8.04 KB, patch)
2013-06-20 03:35 PDT, Xabier Rodríguez Calvar
no flags
Patch (8.74 KB, patch)
2013-06-20 04:20 PDT, Xabier Rodríguez Calvar
no flags
Patch (9.45 KB, patch)
2013-06-20 06:44 PDT, Xabier Rodríguez Calvar
no flags
Patch (25.38 KB, patch)
2013-06-25 04:46 PDT, Xabier Rodríguez Calvar
no flags
Patch (34.20 KB, patch)
2013-06-26 05:57 PDT, Xabier Rodríguez Calvar
no flags
Patch (10.43 KB, patch)
2013-06-26 09:42 PDT, Xabier Rodríguez Calvar
no flags
Patch (6.04 KB, patch)
2013-06-26 15:17 PDT, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2013-06-19 04:45:08 PDT
Created attachment 204989 [details] Patch Fixed some warnings.
WebKit Commit Bot
Comment 2 2013-06-19 04:47:40 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Build Bot
Comment 3 2013-06-19 10:48:53 PDT
Xabier Rodríguez Calvar
Comment 4 2013-06-19 14:42:39 PDT
Created attachment 205032 [details] Patch Fixed windows problems, hopefully.
Build Bot
Comment 5 2013-06-19 22:00:44 PDT
Xabier Rodríguez Calvar
Comment 6 2013-06-20 03:28:25 PDT
Created attachment 205065 [details] Patch Fixed windows problems, again, hopefully.
EFL EWS Bot
Comment 7 2013-06-20 03:31:07 PDT
EFL EWS Bot
Comment 8 2013-06-20 03:32:10 PDT
Early Warning System Bot
Comment 9 2013-06-20 03:34:29 PDT
Xabier Rodríguez Calvar
Comment 10 2013-06-20 03:35:12 PDT
Created attachment 205067 [details] Patch Changelog issue.
EFL EWS Bot
Comment 11 2013-06-20 03:38:14 PDT
EFL EWS Bot
Comment 12 2013-06-20 03:40:53 PDT
Early Warning System Bot
Comment 13 2013-06-20 03:40:56 PDT
Early Warning System Bot
Comment 14 2013-06-20 03:43:26 PDT
Xabier Rodríguez Calvar
Comment 15 2013-06-20 04:20:54 PDT
Created attachment 205070 [details] Patch Added WTF include dir to cmake in netscape plugin to build efl and qt properly.
Early Warning System Bot
Comment 16 2013-06-20 04:25:14 PDT
Early Warning System Bot
Comment 17 2013-06-20 04:27:34 PDT
Xabier Rodríguez Calvar
Comment 18 2013-06-20 06:44:19 PDT
Created attachment 205084 [details] Patch Added WTF include dir to cmake in netscape plugin to build efl and qt properly.
Martin Robinson
Comment 19 2013-06-20 11:18:08 PDT
Comment on attachment 205084 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=205084&action=review > Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:637 > + offsetType = GAIL_AT_OFFSET; // to prevent a compiler warning I'd prefer this to be defined when the variable is declared. Comments should be complete sentences with a capital letter and a period, but it's okay if you just omit these kind of comments completely. > Tools/DumpRenderTree/TestNetscapePlugIn/PluginObject.h:31 > +#ifndef WTF_EXPORT_PRIVATE > +#define WTF_EXPORT_PRIVATE > +#endif Is this usually defined in config.h? > Tools/DumpRenderTree/TestNetscapePlugIn/main.cpp:47 > +#ifdef CRASH > +#undef CRASH > +#endif > + Maybe it would be better to simply pick a non-conflicting macro name? > Tools/TestWebKitAPI/Tests/WebKit2/DOMWindowExtensionNoCache_Bundle.cpp:223 > + index = 0; // to avoid compiler warnings I think it's better to set the value of 'index' when you declare it and omit the comment.
Xabier Rodríguez Calvar
Comment 20 2013-06-20 15:16:06 PDT
(In reply to comment #19) > (From update of attachment 205084 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=205084&action=review > > > Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:637 > > + offsetType = GAIL_AT_OFFSET; // to prevent a compiler warning > > I'd prefer this to be defined when the variable is declared. Comments should be complete sentences with a capital letter and a period, but it's okay if you just omit these kind of comments completely. Roger that. I did it like this because initialization is supposed to happen always and the default only when something wrong happens, which would be rare. Anyway, compiler can optimize it in a different way and my assumption might be irrelevant. > > Tools/DumpRenderTree/TestNetscapePlugIn/PluginObject.h:31 > > +#ifndef WTF_EXPORT_PRIVATE > > +#define WTF_EXPORT_PRIVATE > > +#endif > > Is this usually defined in config.h? > > > Tools/DumpRenderTree/TestNetscapePlugIn/main.cpp:47 > > +#ifdef CRASH > > +#undef CRASH > > +#endif > > + > > Maybe it would be better to simply pick a non-conflicting macro name? These two cases come from including <wtf/Assertions.h>. When I add it, I get compilation errors because of those two cases, the first is not defined and the second is redefined. I could define the export in config.h and maybe change the CRASH macro at main.cpp so that it doesn't conflict with the one in the <wtf/Assertions.h> as you suggest and if I understood you correctly. Other solution would be defining the WTF_ATTRIBUTE_PRINTF macro for those cases instead of just including the header that also causes the other problems. > > Tools/TestWebKitAPI/Tests/WebKit2/DOMWindowExtensionNoCache_Bundle.cpp:223 > > + index = 0; // to avoid compiler warnings > > I think it's better to set the value of 'index' when you declare it and omit the comment. Same as in the first case.
Xabier Rodríguez Calvar
Comment 21 2013-06-25 04:46:42 PDT
Created attachment 205382 [details] Patch Changed according Martin's comments.
Build Bot
Comment 22 2013-06-25 04:50:39 PDT
Early Warning System Bot
Comment 23 2013-06-25 04:53:02 PDT
EFL EWS Bot
Comment 24 2013-06-25 04:53:12 PDT
EFL EWS Bot
Comment 25 2013-06-25 04:53:58 PDT
Build Bot
Comment 26 2013-06-25 05:11:19 PDT
Early Warning System Bot
Comment 27 2013-06-25 05:54:32 PDT
Build Bot
Comment 28 2013-06-25 08:35:45 PDT
Xabier Rodríguez Calvar
Comment 29 2013-06-26 05:57:32 PDT
Created attachment 205480 [details] Patch Fixed Mac compilation and trying fixes for Qt and EFL
EFL EWS Bot
Comment 30 2013-06-26 06:01:09 PDT
EFL EWS Bot
Comment 31 2013-06-26 06:01:31 PDT
Early Warning System Bot
Comment 32 2013-06-26 06:02:51 PDT
Early Warning System Bot
Comment 33 2013-06-26 06:04:56 PDT
Xabier Rodríguez Calvar
Comment 34 2013-06-26 09:42:02 PDT
Created attachment 205504 [details] Patch Including ExportMacros.h instead of the config.h mess.
Martin Robinson
Comment 35 2013-06-26 12:02:05 PDT
Comment on attachment 205504 [details] Patch I think to fix a warning the changes to the plugin are too big and risky (for instance, linking against wtf). Let's just silence this warning on GTK+.
Xabier Rodríguez Calvar
Comment 36 2013-06-26 15:17:08 PDT
Created attachment 205529 [details] Patch Silenced format warning for Gtk+ as required by Martin.
Carlos Garcia Campos
Comment 37 2013-06-27 06:27:47 PDT
Comment on attachment 205529 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=205529&action=review > Source/WebCore/ChangeLog:8 > + No new tests needed. You don't need to include this line when it's obvious, like in this case that you are fixing compile warnings. > Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:315 > + 0, // willLoadURLRequest; > + 0, // willLoadDataRequest; Those trailing ; are weird, but harmless anyway
WebKit Commit Bot
Comment 38 2013-06-27 06:49:11 PDT
Comment on attachment 205529 [details] Patch Clearing flags on attachment: 205529 Committed r152095: <http://trac.webkit.org/changeset/152095>
WebKit Commit Bot
Comment 39 2013-06-27 06:49:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.