Fixing some compiler warnings https://bugs.webkit.org/show_bug.cgi?id=117791

Patch by Xabier Rodriguez Calvar <calvaris@igalia.com> on 2013-06-27
Reviewed by Martin Robinson.

Source/WebCore:

No new tests needed.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(webkitAccessibleTextGetTextForOffset): Fixed warning about
uninitialized variable.

Source/WebKit2:

* UIProcess/API/gtk/tests/WebExtensionTest.cpp: Properly
initialized GDBusInterfaceVTable.
* WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:
(webkitWebPageCreate): Added missing fields to the
WKBundlePageLoaderClient.

Tools:

* GNUmakefile.am: Silenced format warning.
* TestWebKitAPI/Tests/WebKit2/DOMWindowExtensionNoCache_Bundle.cpp:
(TestWebKitAPI::DOMWindowExtensionNoCache::globalObjectIsAvailableForFrame):
Solved warning about uninitialized variable.

Canonical link: https://commits.webkit.org/136174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152095 268f45cc-cd09-0410-ab3c-d52691b4dbfc